setActiveNode: check Node parameter is not null

BUG:465512