libs/libkis/Document.cpp
@@ -129,6 +129,7 @@ Node *Document::activeNode() const
 
 void Document::setActiveNode(Node* value)
 {
+    if (!value) return;
     if (!value->node()) return;
     KisMainWindow *mainWin = KisPart::instance()->currentMainwindow();
     if (!mainWin) return;
@@ -155,7 +156,11 @@ Node *Document::nodeByName(const QString &name) const
 {
     if (!d->document) return 0;
     KisNodeSP node = KisLayerUtils::findNodeByName(d->document->image()->rootLayer(),name);
+
+    qDebug() << "node" << node << "is null" << node.isNull();
+
     if (node.isNull()) return 0;
+
     return Node::createNode(d->document->image(), node);
 }
 
